# llmesh

./: .env.example  .gitignore  3gpp.py  CODE-OF-CONDUCT.md  CONTRIBUTING.md  DEI.md  DRAFT  poetry2.0.0 - pyproject.toml  LICENCE.md  README.md  SECURITY.md  chat_transcript.txt  llm_cache.json  pyproject.toml  pytest.ini  run_examples.sh  run_games.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-tests.yml
docs/design/chat/: architecture.md  features_overview.md  sequence.mmd  structure.mmd
docs/design/mcp_layer/: MCP_use.mmd  architecture.mmd  architecture_simplified.mmd  complex_use.mmd  deployment.mmd  external_use.mmd  internal_use.mmd  security.mmd
docs/design/orchestrator/: architecture.md  features_overview.md  sequence.mmd  structure.mmd
docs/design/overall/: classes.mmd  packages.mmd
docs/design/rag/: architecture.md  features_overview.md  sequence.mmd  structure.mmd
docs/policies/: AAA_Policies.md  LLM_Policies.md
examples/: start_examples.sh  start_games.sh
examples/app_backpanel/: config.yaml  main.py  test_html.html
examples/app_backpanel/tool_manager/: agent.py  base.py  prompt.py  rag.py
examples/app_chatbot/: config.yaml  main.py
examples/app_games/: config.yaml  game.py  main.py
examples/app_games/games/: base.py  fantasia_genesis.py  fantasia_genesis_tools.py  who_am_i.py
examples/app_games/prompts/: agent_action_handler_backstory.txt  agent_context_loader_backstory.txt  agent_hero_forger_backstory.txt  agent_realm_builder_goal.txt  fantasia_rules.txt  task_forge_hero.txt  task_play_output.txt  task_realm_output.txt  whoami_prompt.txt  whoami_rules.txt  whoami_secret_identity.txt
examples/app_memory/: config.yaml  main.py  memgpt_agents.py  memgpt_tools.py  test_langraph_app.py
examples/app_memory/prompts/: load_memory.txt  project_info.txt  select_memory.txt  store_memory.txt  system_prompt.txt
examples/notebooks/: lab_agents.ipynb  lab_chat.ipynb
examples/tool_agents/: config.yaml  main.py  openapi_tool.py
examples/tool_agents/prompts/: agent_planner_backstory.txt  agent_planner_goal.txt  (+3 more)
examples/tool_analyzer/: config.yaml  main.py
examples/tool_api/: config.yaml  main.py
examples/tool_copywriter/: config.yaml  main.py
examples/tool_rag/: config.yaml  main.py
federated_governance/: Agents_Policies.md  Log_Policies.md  Memory_Policies.md  RAG_Policies.md  Storage_Policies.md
libs/core/: config.py  file_cache.py  template_engine.py
llmesh-tutorial/src/: 01_platformconfiguration_.md  02_chatapiendpoint_.md  03_reasoningenginefactory_.md  04_chatmodelfactory_.md  05_promptmanagement_.md  06_chatmemoryfactory_.md  07_toolmanagement_.md  08_ragpipelinecomponents_.md  09_taskforcefactory_.md  10_mcpintegration_.md  index.md
notebooks/meta_prompting/: 01_Introduction.ipynb  02_Defining_Meta_Guidelines.ipynb  03_Managing_Available_Tools.ipynb  04_Generating_Meta_Prompt.ipynb  05_Evaluating_Meta_Prompt.ipynb  06_Improving_Meta_Prompt.ipynb  07_Conclusion.ipynb  agent_simulator.py  config.yaml  tool_manager.py  utils.py
notebooks/platform_services/: 01_Chat_Lab.ipynb  02_RAG_Lab.ipynb  03_Agents_Lab.ipynb  04_MCP_Lab.ipynb
policies/: Prompt_Policies.md
self_serve_platform/system/: config.py
src/lib/core/: log.py  (+3 more)
tests/integration/: test_chat.py
tests/platform/: test_agents.feature  test_backpanel.feature  test_chat.feature  test_chat_service_integration.py  test_openwebui_chatbot.feature  test_orchestrator.py  test_rag_service_integration.py  test_tool_api_integration.py
(+574 files in other folders)
