[project]
name = "llmesh"
requires-python = ">=3.11,<3.13"
version = "0.1.3"
description = "HPE Athonet LLM Platform is an innovative platform designed to streamline and enhance the use of AI in various applications. It serves as a central hub to orchestrate 'Intelligent Plugins,' optimizing AI interactions and processes."
authors = [
    { name = "Antonio Fin ", email = "antonio.fin@hpe.com" },
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["HPE", "Athon", 'LLM Agentic Tool Mesh', 'LLM Agentic Tool Platform']
classifiers = [
    'Development Status :: 4 - Beta',  # See https://pypi.org/classifiers/ for a full list
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',  
    'Programming Language :: Python :: 3',
]
dependencies = [
    "python-multipart>=0.0.18", 
    "pydantic>=2.9.2", 
    "pyyaml>=6.0.2", 
    "jinja2>=3.1.4", 
    "pyopenssl>=24.2.1", 
    "flask>=3.0.3", 
    "langchain>=0.3.4", 
    "python-certifi-win32>=1.6.1 ; sys_platform == 'win32'"
]

[project.optional-dependencies]
chat = [
    "langchain-openai>=0.2.3",
    "langchain-community>=0.3.3",
    "langchain-google-genai>=2.0.1",
    "langchain-anthropic>=0.2.3",
    "langchain-mistralai>=0.2.0",
    "langchain-nvidia-ai-endpoints>=0.3.0",
    "llama-index>=0.11",
    "llama-index-llms-openai>=0.2",
]
agents = [
    # Chat
    "langchain-openai>=0.2.3",
    "langchain-community>=0.3.3",
    "langchain-google-genai>=2.0.1",
    "langchain-anthropic>=0.2.3",
    "langchain-mistralai>=0.2.0",
    "langchain-nvidia-ai-endpoints>=0.3.0",
    "llama-index>=0.11",
    "llama-index-llms-openai>=0.2",
    # Agents specific
    "crewai[tools]>0.80.0",
    "langgraph>=0.2.39",
]
rag = [
    # Chat
    "langchain-openai>=0.2.3",
    "langchain-community>=0.3.3",
    "langchain-google-genai>=2.0.1",
    "langchain-anthropic>=0.2.3",
    "langchain-mistralai>=0.2.0",
    "langchain-nvidia-ai-endpoints>=0.3.0",
    "llama-index>=0.11",
    "llama-index-llms-openai>=0.2",
    # RAG specific
    "chromadb>0.4.24",
    "sentence-transformers>3.2.0",
    "qdrant-client>1.12.0",
    "PyMuPDF>=1.24.11",
    "unstructured[docx,pptx,xlsx,pdf]>=0.16.0",
    "openpyxl>=3.1.5",
    "umap>=0.1.1",
    "matplotlib>=3.9.2",
    "markitdown>=0.0.1a3",
]
test = [
    "pytest>=8.3.3",
    "pytest-optional-tests>=0.1.1"
]
all = [
    # Chat
    "langchain-openai>=0.2.3",
    "langchain-community>=0.3.3",
    "langchain-google-genai>=2.0.1",
    "langchain-anthropic>=0.2.3",
    "langchain-mistralai>=0.2.0",
    "langchain-nvidia-ai-endpoints>=0.3.0",
    "llama-index>=0.11",
    "llama-index-llms-openai>=0.2",
    # Agents specific
    "crewai[tools]>0.80.0,<0.90.0",
    "langgraph>=0.2.39",
    # RAG specific
    "chromadb>0.4.24",
    "sentence-transformers>3.2.0",
    "qdrant-client>1.12.0",
    "PyMuPDF>=1.24.11",
    "unstructured[docx,pptx,xlsx,pdf]>=0.16.0",
    "openpyxl>=3.1.5",
    "umap>=0.1.1",
    "matplotlib>=3.9.2",
    "markitdown>=0.0.1a3",
]

[project.urls]
repository = "https://github.com/HewlettPackard/llmesh"
documentation = "https://github.com/HewlettPackard/llmesh/wiki"

[tool.poetry]
packages = [
    { include = "athon", from = "self_serve_platform/package" },
    { include = "self_serve_platform" }
]
exclude = [
    "self_serve_platform/tests"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
